.provarCaches/00D6C0000000xA6UAI/objects/Dataplier__Execution_Step__c.object
<CustomObject>
    <fields>
        <fullName>Dataplier__Child_Steps_Settings__c</fullName>
        <label>Parent Steps Settings</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dataplier__Condition__c</fullName>
        <label>Сondition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dataplier__Data_Set_Option__c</fullName>
        <label>Data Set Option</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dataplier__Execution_Sequence_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Execution Sequence Step</label>
        <referenceTo>Dataplier__Execution_Sequence_Step__c</referenceTo>
        <relationshipLabel>Execution Steps</relationshipLabel>
        <relationshipName>Execution_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dataplier__Execution__c</fullName>
        <label>Execution</label>
        <referenceTo>Dataplier__Execution__c</referenceTo>
        <relationshipLabel>Execution Steps</relationshipLabel>
        <relationshipName>Execution_Steps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Dataplier__Filter_Target_Records__c</fullName>
        <label>Filter Target Records</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dataplier__Filter__c</fullName>
        <label>Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dataplier__Hierarchy_Levels__c</fullName>
        <label>Hierarchy Levels</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dataplier__Key_Fields__c</fullName>
        <label>Key Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dataplier__Limit_Chunk_Bulk__c</fullName>
        <label>Limit Chunk Bulk</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dataplier__Lookup_Fields__c</fullName>
        <description>Used in dinamic sequence generation</description>
        <inlineHelpText>Used in dinamic sequence generation</inlineHelpText>
        <label>Lookup Fields</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dataplier__Masked_Fields__c</fullName>
        <label>Masked Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dataplier__Maximum_Deployed__c</fullName>
        <description>Maximum number of entries for deployed</description>
        <label>Maximum Deployed</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dataplier__Not_Populated_Lookups__c</fullName>
        <label>Not Populated Lookups</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dataplier__Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dataplier__Object_Fields__c</fullName>
        <label>Object Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dataplier__Operation__c</fullName>
        <label>Operation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>INSERT</fullName>
                </value>
                <value>
                    <fullName>UPSERT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dataplier__Parent_Id_Field__c</fullName>
        <label>Parent Id Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dataplier__Parent_Steps_Settings__c</fullName>
        <label>Parent Steps Settings</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dataplier__Parent_Steps__c</fullName>
        <label>Parent Steps</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dataplier__Query__c</fullName>
        <label>Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dataplier__Records_Failed__c</fullName>
        <label>Records Failed</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dataplier__Records_Processed__c</fullName>
        <label>Records Processed</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dataplier__Second_Stage_Lookups__c</fullName>
        <label>Second Stage Lookups</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dataplier__SelfLookups__c</fullName>
        <label>SelfLookups</label>
        <length>16384</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dataplier__Sequence__c</fullName>
        <label>Sequence</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dataplier__Space_Required__c</fullName>
        <description>calculated required space</description>
        <formula>CASE( Dataplier__Object_API_Name__c, &apos;Campaigns&apos; , 8, &apos;CampaignMember&apos; , 1, &apos;Articles&apos;, 4, 2)  * Dataplier__Records_Processed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Space required</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dataplier__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Faled</fullName>
                </value>
                <value>
                    <fullName>Retrieved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dataplier__Total_batches__c</fullName>
        <label>Total batches</label>
        <summaryForeignKey>Dataplier__Execution_Step_Records__c.Dataplier__Execution_Step__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Execution Step</label>
    <nameField>
        <displayFormat>ES-{0000000}</displayFormat>
        <label>Execution Step Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Execution Steps</pluralLabel>
    <recordTypes>
        <fullName>Dataplier__ExecutionStep</fullName>
        <active>true</active>
        <description>for test</description>
        <label>ExecutionStep</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>